@startuml
skinparam classAttributeIconSize 0
abstract class Shape{
    - base: float
    - height: float
    + getBase(): float
    + getHeight(): float
    + setBase(): void
    + setHeight(): void
    + {abstract} calculateArea(): float
}
class Rectangle
class Triangle
Rectangle --|> Shape
Triangle --|> Shape
@enduml